changed sections to divs

--- a/site/index.html
+++ b/site/index.html
@@ -12,15 +12,15 @@
 
   <body class="body">
     <main class="board">
-      <section class="position" id="b1"></section>
-      <section class="position" id="b2"></section>
-      <section class="position" id="b3"></section>
-      <section class="position" id="b4"></section>
-      <section class="position" id="b5"></section>
-      <section class="position" id="b6"></section>
-      <section class="position" id="b7"></section>
-      <section class="position" id="b8"></section>
-      <section class="position" id="b9"></section>
+      <div class="position" id="b1"></div>
+      <div class="position" id="b2"></div>
+      <div class="position" id="b3"></div>
+      <div class="position" id="b4"></div>
+      <div class="position" id="b5"></div>
+      <div class="position" id="b6"></div>
+      <div class="position" id="b7"></div>
+      <div class="position" id="b8"></div>
+      <div class="position" id="b9"></div>
     </main>
 
     <span class="winner"></span>
