media on a separated file

--- a/site/index.html
+++ b/site/index.html
@@ -24,6 +24,6 @@
     </main>
 
     <span class="winner"></span>
-    <audio src="../win-track.mp3" id="win-track" loop="true"></audio>
+    <audio src="../media/win-track.mp3" id="win-track" loop="true"></audio>
   </body>
 </html>
