--- a/site/index.html
+++ b/site/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <script src="main.js" defer></script>
+    <script src="theme.js" defer></script>
     <title>Tic Tac Toe</title>
   </head>
 
   <body class="body">
+    <button class="theme-button" title="Change theme"></button>
+
     <main class="board">
       <div class="position" id="b1"></div>
       <div class="position" id="b2"></div>
